--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
   },
