--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
     "server-only": "^0.0.1",
+    "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
   },
