--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -31,7 +32,9 @@
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "jotai": "^2.16.0",
     "lucide-react": "^0.562.0",
+    "nanoid": "^5.1.6",
     "next": "16.1.0",
     "next-view-transitions": "^0.3.5",
     "nextjs-toploader": "^3.9.17",
